--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -35,3 +35,7 @@ twitter:
 google_plus:
 fb_admins:
 fb_app_id:
+mathjax: 
+  enable: true
+  perpage: false
+  cdn: //cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
